infrastructure/coupon-service/data/coupon_service.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: meli
  namespace: default
spec:
  template:
    spec:
      containers:
        - image: kusanami/first-coupon:latest
