infrastructure/coupon-service/data/coupon_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coupon-ingress
  namespace: kourier-system
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/certificate-arn  : "arn:aws:acm:us-east-1:763172254126:certificate/f2822922-2eb6-4f48-a444-0b31c2b870ee"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    external-dns.alpha.kubernetes.io/hostname: "meli.couponlm.net"
    alb.ingress.kubernetes.io/load-balancer-attributes: idle_timeout.timeout_seconds=600
  labels:
    app: kourier
    networking.knative.dev/ingress-provider: kourier
spec:
  rules:
    - http:
        paths:
          - path: /coupon
            backend:
              serviceName: kourier
              servicePort: 80
          - path: /*
            backend:
              serviceName: ssl-redirect
              servicePort: use-annotation
